[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/Objects/WordPlatformBreak.gd" type="Script" id=1]
[ext_resource path="res://assets/Objects/WordPlatformInteractable.tscn" type="PackedScene" id=2]

[node name="WordPlatformBreak" type="Node2D"]
script = ExtResource( 1 )

[node name="WordPlatformInteractable" parent="." instance=ExtResource( 2 )]

[node name="RichTextLabel" parent="WordPlatformInteractable/WordPlatformText" index="0"]
text = "break"

[node name="CollisionShape2D" parent="WordPlatformInteractable/CollisionStuff/VisibleArea" index="0"]
visible = false

[node name="FallTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="BreakTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FallTimer" to="." method="_on_FallTimer_timeout"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]

[editable path="WordPlatformInteractable"]
[editable path="WordPlatformInteractable/WordPlatformText"]
